# RustWebAPi

./: .env.example  Cargo.toml  GUIDE.md  docker-compose.yml
docs/: LOGGING.md  PRODUCTION_READY.md  RUST_CONCEPTS.md
examples/: does_not_compile.rs  lifetimes_ok.rs  ownership_borrow.rs
migrations/: 20250228000000_create_guests.sql  20250301000000_add_guest_mail_phone_opt_outs.sql
src/: lib.rs  main.rs
src/cmd/: main.rs
src/domain/: guest.rs  item.rs  mod.rs  repository.rs  validation.rs
src/environment/: mod.rs
src/server/: dto.rs  error.rs  handlers.rs  mapper.rs  mod.rs  nats_consumer.rs  state.rs
src/server/guest/: dto.rs  handlers.rs  mapper.rs  mod.rs  stream.rs  validation.rs
src/server/item/: dto.rs  handlers.rs  mapper.rs  mod.rs
src/store/: guest.rs  item.rs  mod.rs  store.rs
