[package]
name = "hello_world_api"
version = "0.1.0"
edition = "2021"
description = "Petite API Axum avec Hello World, Create et Get en RAM"

[[bin]]
name = "hello_world_api"
path = "src/cmd/main.rs"

[dependencies]
axum = "0.7"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.6", features = ["trace", "request-id", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-nats = "0.46"
dotenvy = "0.15"
