[package]
name = "hello_world_api"
version = "0.1.0"
edition = "2021"
description = "Petite API Axum avec Hello World, Create et Get en RAM"

[[bin]]
name = "hello_world_api"
path = "src/cmd/main.rs"

[dependencies]
axum = "0.7"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.6", features = ["trace", "request-id", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-nats = { version = "0.46", features = ["jetstream"] }
bytes = "1"
futures-util = "0.3"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
